res/examples/valid/call_callable_fn_as_list_items.eg
fn sum (a: number, b: number): number => {
    a + b
}

[sum(1, 2), sum(3, 4), 5];