res/examples/invalid/tuple_missing_trailing_comma.eg
(1, 2, 3);

// out: SyntaxError: unexpected ")"; expected: ["\",\""]